update style.css, intro.js, style.css and constants.js

--- a/src/global/style.css
+++ b/src/global/style.css
@@ -2,6 +2,18 @@
 
 /* global style for all elements */
 
+:root {
+  --success: '#2ECC71';
+  --error: '#E74C3C';
+  --warn: '#F39C12';
+  --info: '#3498DB';
+  --primary: '#73AF00';
+  --secondary: '#5D6661';
+  --black: '#363636';
+  --light: '#E7E7E7';
+  --dimmed: '#B7C9B3';
+}
+
 * {
   margin: 0;
   padding: 0;
