--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -34,8 +34,11 @@
   color: #5d6661;
   font-size: 22.65px;
   font-weight: 400;
+  border: 2px solid #e7e7e7;
 }
-
+.content .form .search-bar:has(input:focus) {
+  border-color: #3498db;
+}
 .content .form input {
   flex: 1;
   background: none;
@@ -45,6 +48,8 @@
   padding-left: 30px;
   height: 44px;
   font-size: inherit;
+  position: relative;
+  z-index: 4;
 }
 
 .content .form button {
@@ -55,6 +60,8 @@
   gap: 6px;
   justify-content: center;
   font-size: inherit;
+  position: relative;
+  z-index: 4;
 }
 
 .content .form button[type='submit'] {
@@ -65,19 +72,41 @@
   padding: 8px;
 }
 
-.content .form button.filter {
+.content .form .filter {
   position: relative;
 }
 
-.content .form button.filter .select-options {
+.content .form .filter .select-options {
   position: absolute;
-  top: 100%;
-  max-width: 300px;
+  top: calc(100%);
+  left: -18px;
+  z-index: 3;
+  width: max-content;
+  width: 300px;
   max-height: 200px;
   overflow: hidden;
   border-radius: 18px 0px 18px 18px;
   border: 2px solid #3498db;
   background: #d9d9d9;
+  text-align: left;
+  padding: 24px 12px 12px 12px;
+}
+
+.content .form .filter .select-options li {
+  padding: 5px 12px;
+  border-radius: 8px;
+  transition: 100ms ease;
+  line-height: 34px;
+}
+
+.content .form .filter .select-options li:hover {
+  background: #3498db;
+  color: #fff;
+  cursor: pointer;
+}
+
+.content .form .filter .select-options li:active {
+  background: var(--info);
 }
 
 /* } */
