--- a/src/global/style.css
+++ b/src/global/style.css
@@ -3,15 +3,15 @@
 /* global style for all elements */
 
 :root {
-  --success: '#2ECC71';
-  --error: '#E74C3C';
-  --warn: '#F39C12';
-  --info: '#3498DB';
-  --primary: '#73AF00';
-  --secondary: '#5D6661';
-  --black: '#363636';
-  --light: '#E7E7E7';
-  --dimmed: '#B7C9B3';
+  --success: #2ecc71;
+  --error: #e74c3c;
+  --warn: #f39c12;
+  --info: #3498db;
+  --primary: #73af00;
+  --secondary: #5d6661;
+  --black: #363636;
+  --light: #e7e7e7;
+  --dimmed: #b7c9b3;
 }
 
 * {
