--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -27,15 +27,18 @@
   width: 100%;
   padding: 6px 6px 6px 16px;
   border-radius: 15px;
-  background: #e7e7e7;
+  background: var(--light);
   box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.25);
   margin-top: 150px;
   gap: 30px;
-  color: #5d6661;
+  color: var(--secondary);
   font-size: 22.65px;
   font-weight: 400;
-  border: 2px solid #e7e7e7;
+  border: 2px solid var(--light);
+  transition: 100ms linear;
 }
+.content .form .search-bar:hover,
+.content .form .search-bar:has(.filter.open),
 .content .form .search-bar:has(input:focus) {
   border-color: #3498db;
 }
@@ -43,9 +46,7 @@
   flex: 1;
   background: none;
   border: 0;
-  border-left: 2px solid #5d6661;
   height: 100%;
-  padding-left: 30px;
   height: 44px;
   font-size: inherit;
   position: relative;
@@ -67,46 +68,53 @@
 .content .form button[type='submit'] {
   align-items: center;
   border-radius: 15px;
-  background: #73af00;
+  background: var(--primary);
   box-shadow: 0px 0px 6.1px 0px rgba(0, 0, 0, 0.25);
   padding: 8px;
 }
+.residentials {
+  max-width: 1560px;
+  margin: 0 auto;
+}
+.title {
+  color: #5d6661;
+  font-size: 55.9px;
+  font-weight: 400;
+  text-align: center;
+  padding: 40px 0px;
+}
 
-.content .form .filter {
+.slide-item img {
+  max-width: 100%;
+  height: 435px;
+}
+
+.slide-container {
   position: relative;
-}
-
-.content .form .filter .select-options {
-  position: absolute;
-  top: calc(100%);
-  left: -18px;
-  z-index: 3;
-  width: max-content;
-  width: 300px;
-  max-height: 200px;
+  box-shadow: 0px 0px 17.5px rgba(0, 0, 0, 0.25);
+  border-radius: 27px;
   overflow: hidden;
-  border-radius: 18px 0px 18px 18px;
-  border: 2px solid #3498db;
-  background: #d9d9d9;
-  text-align: left;
-  padding: 24px 12px 12px 12px;
 }
 
-.content .form .filter .select-options li {
-  padding: 5px 12px;
-  border-radius: 8px;
-  transition: 100ms ease;
-  line-height: 34px;
+.navigations {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
 }
 
-.content .form .filter .select-options li:hover {
-  background: #3498db;
-  color: #fff;
-  cursor: pointer;
+.navigations button {
+  position: relative;
+  z-index: 2;
+  border-radius: 13px 0px 0px 13px;
+  background: #ebebeb;
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+  padding: 25px;
 }
 
-.content .form .filter .select-options li:active {
-  background: var(--info);
+.navigations button.prev {
+  rotate: 180deg;
 }
-
 /* } */
