--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -84,9 +84,13 @@
   padding: 40px 0px;
 }
 
+.slide-container .slide-item {
+  height: 435px;
+}
+
 .slide-item img {
   max-width: 100%;
-  height: 435px;
+  height: 100%;
 }
 
 .slide-container {
@@ -117,4 +121,13 @@
 .navigations button.prev {
   rotate: 180deg;
 }
+
+.cards-container {
+  display: grid;
+  justify-content: space-between;
+  gap: 80px calc(100% / 4 - 331px) ;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(331px, 1fr));
+}
+
 /* } */
