--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -123,11 +123,41 @@
 }
 
 .cards-container {
-  display: grid;
+  display: flex;
+  gap: 80px 40px;
+  flex-wrap: wrap;
+}
+
+.justify-between {
   justify-content: space-between;
-  gap: 80px calc(100% / 4 - 331px) ;
-  width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(331px, 1fr));
+}
+
+.paginations {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+  margin: 56px 0px;
+}
+
+.paginations button {
+  border-radius: 11px;
+  background: var(--swiper-pagination-bullet-inactive-color);
+  box-shadow: 0px 2px 3.8px 0px rgba(0, 0, 0, 0.25);
+  color: var(--secondary);
+  font-size: 22.65px;
+  font-weight: 400;
+  width: 45px;
+  height: 45px;
+  border: 1px solid var(--swiper-pagination-bullet-inactive-color);
+  transition: 300ms ease;
+}
+
+.paginations button.active {
+  border-radius: 11px;
+  border-color: var(--primary-2);
+  background: var(--light-2);
+  translate: 0px -3px;
 }
 
 /* } */
