--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -5,6 +5,7 @@
   border-radius: 27px;
   background: #e4e4e4;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+  position: relative;
 }
 
 .card .card-top {
@@ -105,4 +106,30 @@
 .card .overlay button {
   flex: 1;
   opacity: 0;
+}
+
+.card .edit-btn {
+  position: absolute;
+  bottom: -23px;
+  right: -23px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 46px;
+  height: 46px;
+  border-radius: 46px;
+  background: var(--swiper-pagination-color);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+}
+.card .pending-status {
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 4;
+  border-radius: 27px;
+  border: 1px solid #0085af;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5.300000190734863px);
 }
